[patch.crates-io]
abomonation = { git = "https://github.com/markbt/abomonation", rev = "0f43346d2afa2aedc64d61f3f4273e8d1e454642" }

[workspace]
members = [
  "exec/eden_apfs_mount_helper",
  "exec/fsprobe",
  "exec/hgmain",
  "exec/scm_daemon",
  "exec/scratch",
  "lib/async-runtime",
  "lib/atomicfile",
  "lib/auth",
  "lib/backingstore",
  "lib/backingstore/benches",
  "lib/blackbox",
  "lib/blackbox/serde_alt",
  "lib/cats",
  "lib/checkout",
  "lib/clidispatch",
  "lib/clientinfo",
  "lib/clientinfo-async",
  "lib/cliparser",
  "lib/clone",
  "lib/commandserver",
  "lib/commitcloudsubscriber",
  "lib/config/hgrc-parser",
  "lib/config/loader",
  "lib/config/model",
  "lib/config/set",
  "lib/config/static",
  "lib/config/static/macros",
  "lib/config/union",
  "lib/constructors",
  "lib/control-point",
  "lib/copytrace",
  "lib/cpython-async",
  "lib/cpython-ext",
  "lib/dag",
  "lib/dag/benches",
  "lib/dag/bindag",
  "lib/dag/dag-types",
  "lib/dag/gitdag",
  "lib/debugtop",
  "lib/dev-logger",
  "lib/doctor/network",
  "lib/drawdag",
  "lib/eagerepo",
  "lib/edenapi",
  "lib/edenapi/ext",
  "lib/edenapi/trait",
  "lib/edenapi/types",
  "lib/edenapi/types/proc_macros",
  "lib/edenfs-client",
  "lib/edenfs_ffi",
  "lib/encoding",
  "lib/exchange",
  "lib/formatter",
  "lib/fsinfo",
  "lib/fsyncglob",
  "lib/gitstore",
  "lib/hg-http",
  "lib/hg-metrics",
  "lib/hgcommands",
  "lib/hgcommits",
  "lib/hgcommits/git",
  "lib/hgcommits/trait",
  "lib/hgtime",
  "lib/http-client",
  "lib/identity",
  "lib/indexedlog",
  "lib/insta_ext",
  "lib/io",
  "lib/io/term/logger",
  "lib/io/term/style",
  "lib/lazystr",
  "lib/linelog",
  "lib/lz4-pyframe",
  "lib/manifest",
  "lib/manifest-tree",
  "lib/metalog",
  "lib/metrics",
  "lib/metrics/render",
  "lib/migration",
  "lib/mincode",
  "lib/minibench",
  "lib/minibench/examples",
  "lib/minibytes",
  "lib/mpatch",
  "lib/mpatch-sys",
  "lib/mutationstore",
  "lib/nodemap",
  "lib/nonblocking",
  "lib/pathhistory",
  "lib/pathmatcher",
  "lib/pprint",
  "lib/procinfo",
  "lib/progress/model",
  "lib/progress/render",
  "lib/python-modules",
  "lib/python-modules/codegen",
  "lib/radixbuf",
  "lib/refencode",
  "lib/renderdag",
  "lib/repo",
  "lib/repo_name",
  "lib/repolock",
  "lib/revisionstore",
  "lib/revisionstore/types",
  "lib/revlogindex",
  "lib/revsets",
  "lib/runlog",
  "lib/sampling",
  "lib/sparse",
  "lib/spawn-ext",
  "lib/status",
  "lib/storemodel",
  "lib/storemodel/hgstore",
  "lib/streams",
  "lib/third-party/conch-parser",
  "lib/third-party/streampager",
  "lib/third-party/webview-sys",
  "lib/thrift-types",
  "lib/tracing-analyzer",
  "lib/tracing-collector",
  "lib/tracing-reload",
  "lib/tracing-runtime-callsite",
  "lib/tracing-sampler",
  "lib/treestate",
  "lib/types",
  "lib/util",
  "lib/util/atexit",
  "lib/util/factory",
  "lib/util/hgplain",
  "lib/util/nodeipc",
  "lib/util/nodeipc/derive",
  "lib/util/procutil",
  "lib/util/syncify",
  "lib/util/syncify/tree-pattern-match",
  "lib/util/system-command",
  "lib/util/testutil",
  "lib/util/time-interval",
  "lib/util/udsipc",
  "lib/version",
  "lib/vfs",
  "lib/vlqencoding",
  "lib/webview-app",
  "lib/workingcopy",
  "lib/workingcopy/repostate",
  "lib/xdiff",
  "lib/xdiff-sys",
  "lib/zstdelta",
  "lib/zstore",
  "saplingnative/bindings",
  "saplingnative/bindings/modules/pyatexit",
  "saplingnative/bindings/modules/pyauth",
  "saplingnative/bindings/modules/pyblackbox",
  "saplingnative/bindings/modules/pybytes",
  "saplingnative/bindings/modules/pycats",
  "saplingnative/bindings/modules/pycbor",
  "saplingnative/bindings/modules/pycext",
  "saplingnative/bindings/modules/pycheckout",
  "saplingnative/bindings/modules/pyclientinfo",
  "saplingnative/bindings/modules/pycliparser",
  "saplingnative/bindings/modules/pyconchparser",
  "saplingnative/bindings/modules/pyconfigloader",
  "saplingnative/bindings/modules/pycopytrace",
  "saplingnative/bindings/modules/pydag",
  "saplingnative/bindings/modules/pydiffhelpers",
  "saplingnative/bindings/modules/pydirs",
  "saplingnative/bindings/modules/pydoctor",
  "saplingnative/bindings/modules/pydrawdag",
  "saplingnative/bindings/modules/pyeagerepo",
  "saplingnative/bindings/modules/pyedenapi",
  "saplingnative/bindings/modules/pyedenclient",
  "saplingnative/bindings/modules/pyerror",
  "saplingnative/bindings/modules/pyexchange",
  "saplingnative/bindings/modules/pyfail",
  "saplingnative/bindings/modules/pyfs",
  "saplingnative/bindings/modules/pygitstore",
  "saplingnative/bindings/modules/pyhgmetrics",
  "saplingnative/bindings/modules/pyhgtime",
  "saplingnative/bindings/modules/pyidentity",
  "saplingnative/bindings/modules/pyindexedlog",
  "saplingnative/bindings/modules/pyio",
  "saplingnative/bindings/modules/pylinelog",
  "saplingnative/bindings/modules/pylock",
  "saplingnative/bindings/modules/pylz4",
  "saplingnative/bindings/modules/pymanifest",
  "saplingnative/bindings/modules/pymetalog",
  "saplingnative/bindings/modules/pymodules",
  "saplingnative/bindings/modules/pymutationstore",
  "saplingnative/bindings/modules/pynodeipc",
  "saplingnative/bindings/modules/pynodemap",
  "saplingnative/bindings/modules/pypathhistory",
  "saplingnative/bindings/modules/pypathmatcher",
  "saplingnative/bindings/modules/pypprint",
  "saplingnative/bindings/modules/pyprocess",
  "saplingnative/bindings/modules/pyprogress",
  "saplingnative/bindings/modules/pyrefencode",
  "saplingnative/bindings/modules/pyregex",
  "saplingnative/bindings/modules/pyrenderdag",
  "saplingnative/bindings/modules/pyrepo",
  "saplingnative/bindings/modules/pyrevisionstore",
  "saplingnative/bindings/modules/pyrevlogindex",
  "saplingnative/bindings/modules/pysptui",
  "saplingnative/bindings/modules/pystatus",
  "saplingnative/bindings/modules/pythreading",
  "saplingnative/bindings/modules/pytoml",
  "saplingnative/bindings/modules/pytracing",
  "saplingnative/bindings/modules/pytreestate",
  "saplingnative/bindings/modules/pyversion",
  "saplingnative/bindings/modules/pyvlq",
  "saplingnative/bindings/modules/pywebview",
  "saplingnative/bindings/modules/pyworker",
  "saplingnative/bindings/modules/pyworkingcopy",
  "saplingnative/bindings/modules/pyxdiff",
  "saplingnative/bindings/modules/pyzstd",
  "saplingnative/bindings/modules/pyzstore",
  "saplingnative/conch_parser",
  "saplingnative/pybindings",
]
resolver = "2"
