[package]
name = "hgmain"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
libc = "0.2"
dirs = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.7", features = ["handleapi", "processenv", "winbase"]}
failure = "0.1"

[dependencies.encoding]
path = "../../lib/encoding"

[dependencies.hgpython]
path = "../../lib/hgpython"

[features]
buildinfo = []
default = []
with_chg = []
hgdev = ["hgpython/hgdev"]
buckbuild = ["hgpython/buckbuild"]
