[package]
name = "utils"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = { version = "0.4.11", features = ["serde"] }
failure = "0.1.3"
indexedlog = { path = "../../lib/indexedlog" }
manifest = { path = "../../lib/manifest" }
pathmatcher = { path = "../../lib/pathmatcher" }
revisionstore = { path = "../../lib/revisionstore" }
structopt = "0.2"
types = { path = "../../lib/types" }
