[package]
name = "backingstore"
version = "0.1.0"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
edition = "2018"

[dependencies]
revisionstore = { path = "../revisionstore" }
configparser = { path = "../configparser" }
types = { path = "../types" }
bytes = "*"
failure = "*"
libc = "*"

[lib]
crate-type = ["staticlib", "lib"]
