[package]
name = "cliparser"
version = "0.0.1"
authors = ["Facebook Source Control Team <sourcecontrol-dev@fb.com>"]
edition = "2018"

[dependencies]
failure = "0.1.3"
lazy_static = "1.3.0"
shlex = { path = "../shlex" }
cpython-ext = { path = "../cpython-ext", optional = true }

[dependencies.cpython]
version = "0.3"
default-features = false
features = ["python27-sys"]
optional = true

[features]
default = []
python = ["cpython-ext", "cpython"]
