[package]
name = "configparser"
version = "0.1.0"

[dependencies]
bytes = "0.4.8"
dirs = "1.0.2"
failure = "0.1.1"
failure_derive = "0.1.1"
indexmap = "1.0.1"
pest = "1.0.6"
pest_derive = "1.0.7"
shellexpand = "1.0.0"

[dev-dependencies]
minibench = { path = "../minibench" }
tempdir = "0.3.7"

[[bench]]
name = "bench"
harness = false
