[package]
name = "configparser"
version = "0.1.0"

[dependencies]
bytes = "0.4.10"
dirs = "1.0.4"
failure = "0.1.2"
failure_derive = "0.1.2"
indexmap = "1.0.1"
pest = "2.0.1"
pest_derive = "2.0.1"
shellexpand = "1.0.0"

[dev-dependencies]
minibench = { path = "../minibench" }
tempdir = "0.3.7"

[[bench]]
name = "bench"
harness = false
