[package]
name = "dag"
version = "0.1.0"
edition = "2018"

[dependencies]
indexedlog = { path = "../indexedlog" }
vlqencoding = { path = "../vlqencoding" }

byteorder = "1.2.7"
failure = "0.1.5"
fs2 = "0.4.3"
indexmap = "1.0.1"
tempfile = "3.0.7"

[dev-dependencies]
drawdag = { path = "../drawdag" }
minibench = { path = "../minibench" }
quickcheck = "0.6"

[[bench]]
name = "spanset"
harness = false

[[bench]]
name = "segment_sizes"
harness = false

[[bench]]
name = "dag_ops"
harness = false
