[package]
name = "edenapi"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "0.4.11"
curl = { version = "0.4.20", features = ["http2"] }
failure = "0.1.3"
futures = "0.1.25"
hyper = "0.12.14"
hyper-rustls = "0.15.0"
lazy_static = "1.2.0"
log = "0.4.6"
percent-encoding = "1.0.1"
revisionstore = { path = "../revisionstore" }
rustls = "0.14.0"
serde_json = "1.0.38"
tokio = "0.1.11"
types = { path = "../types" }
url = "1.7.2"
url-ext = { path = "../url-ext" }
webpki-roots = "0.15.0"
