[package]
name = "edenapi"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "0.4.11"
curl = { version = "0.4.20", features = ["http2"] }
failure = "0.1.3"
http = "0.1.17"
itertools = "0.8.0"
log = "0.4.6"
parking_lot = "0.9"
revisionstore = { path = "../revisionstore" }
serde = "1.0.89"
serde_cbor = "0.9.0"
types = { path = "../types" }
url = "1.7.2"
