[package]
name = "hgcommands"
version = "0.1.0"
edition = "2018"

[dependencies]
bindings = { path = "../../edenscmnative/bindings" }
clidispatch = { path = "../clidispatch" }
cliparser = { path = "../cliparser", features = ["python"] }
cpython-ext = { path = "../cpython-ext" }
libc = "0.2"
failure = "0.1"
revisionstore = { path = "../revisionstore"}
types = { path = "../types" }
util = { path = "../util" }

[dependencies.encoding]
path = "../encoding"

[dependencies.cpython]
version = "0.3"
default-features = false
features = ["python27-sys"]

[dependencies.python27-sys]
version = "0.3"
