[package]
name = "hgpython"
version = "0.1.0"
edition = "2018"

[dependencies]
libc = "0.2"
clidispatch = { path = "../clidispatch" }
cliparser = { path = "../cliparser", features = ["python"] }

[dependencies.encoding]
path = "../encoding"

[dependencies.cpython]
version = "0.3"
default-features = false
features = ["python27-sys"]

[dependencies.python27-sys]
version = "0.3"
